fixed process z-index

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -133,6 +133,7 @@
 		width: unset;
 		padding: unset;
 		z-index: 10;
+        position: relative;
 	}
     #process .scrolljacker aside.right-jack {
         width: 100%;
@@ -415,37 +416,7 @@
 	.nav-open .royals-w-cheese .logo-map:focus { transform: rotate3d(0, 1, 0, 360deg); }
 
 	header.global-header .cta-link { margin-right: 8rem; display: none; }
-	/*
 
-
-.royals-w-cheese .logo-map {
-	transform: scaleX(1) scaleY(1) scaleZ(1) rotateX(0deg) rotateY(360deg) rotateZ(0deg) translateX(0px) translateY(0px) translateZ(0px) skewX(0deg) skewY(0deg);
-}
-.cube-wrap {
-	perspective: 1000px;
-	perspective-origin: 50% 50%;
-}
-
-
-	.royals-w-cheese .logo-map:after {
-		display: block;
-        padding: 0;
-        font-style: normal;
-        font-variant: normal;
-        text-rendering: auto;
-        -webkit-font-smoothing: antialiased;
-        content: "\f0d7";
-        font-family: "Font Awesome 5 Free";
-        font-weight: 900;
-        height: 30px;
-        width: 21px;
-        position: absolute;
-        right: 0;
-        top: 16px;
-        font-size: 2rem;
-	}
-	.nav-open .royals-w-cheese .logo-map:after { content: "\f0d8"; }
-	*/
     header.global-header .nav-menu-wrapper {
 		background-color: rgba(0, 0, 0, .9);
         right: 100vw;
